dist_man1_MANS=

if BUILD_CRYPTOPESETAD
  dist_man1_MANS+=cryptopesetad.1
endif

if ENABLE_QT
  dist_man1_MANS+=cryptopeseta-qt.1
endif

if BUILD_CRYPTOPESETA_CLI
  dist_man1_MANS+=cryptopeseta-cli.1
endif

if BUILD_CRYPTOPESETA_TX
  dist_man1_MANS+=cryptopeseta-tx.1
endif

if BUILD_CRYPTOPESETA_UTIL
  dist_man1_MANS+=cryptopeseta-util.1
endif

if ENABLE_WALLET
if BUILD_CRYPTOPESETA_WALLET
  dist_man1_MANS+=cryptopeseta-wallet.1
endif
endif
